--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "name": "web_scrapping",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "node ./src/index.js"
+  },
+  "dependencies": {
+    "puppeteer": "^9.0.0"
+  }
 }
